--- a/css/gamehub.css
+++ b/css/gamehub.css
@@ -1,4 +1,4 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -7,43 +7,19 @@
 
 body {
     background-color: #121212;
-    /* background: linear-gradient(135deg, #0d0422, #450eba); */
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 html {
     font-size: 16px;
 }
 
-header {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    color: #ffffff;
-    background-color: #333;
-    width: 100%;
-    box-sizing: border-box;
-    position: fixed;
-    top: 0;
-    z-index: 1000;
-}
-
-.back-arrow {
-    font-size: 24px;
-    color: #fff;
-    text-decoration: none;
-    margin-right: 10px;
-    /*display: none;*/ /* Initially hidden */
-}
-
 h1 {
     margin: 0;
     color: #ffffff;
+    text-align: center;
 }
 
 h3 {
@@ -52,12 +28,18 @@ h3 {
     text-align: center;
 }
 
+.dropdown-menu {
+    z-index: 1110;
+    /* Set higher z-index for the dropdown menu */
+    position: absolute;
+    /* Ensure it's positioned properly */
+}
+
 .container-index {
     display: flex;
     justify-content: center;
     align-items: center;
     flex: 1;
-    margin-top: 80px; /* Adjust for the fixed header height */
     text-align: center;
     padding: 20px;
 }
@@ -65,7 +47,7 @@ h3 {
 .main-menu {
     display: flex;
     justify-content: center;
-    margin-bottom: 40px;
+    margin-top: 25%;
 }
 
 .menu-item {
@@ -77,6 +59,7 @@ h3 {
     cursor: pointer;
     position: relative;
     transition: transform 0.3s;
+    justify-content: space-around;
 }
 
 .menu-item i {
@@ -100,7 +83,7 @@ h3 {
 
 .menu-item:hover {
     transform: scale(1.1);
-    opacity: 0.2;
+    opacity: 1;
 }
 
 .menu-item:hover .item-name {
@@ -109,6 +92,52 @@ h3 {
 }
 
 .menu-item:hover i {
+    transform: scale(1.2);
+}
+
+
+#menu-item {
+    color: #ffffff;
+    background-color: #333;
+    padding: 20px;
+    margin: 0 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    position: relative;
+    transition: transform 0.3s;
+    justify-content: space-around;
+}
+
+#menu-item i {
+    font-size: 24px;
+    transition: transform 0.3s;
+}
+
+#menu-item .item-name {
+    display: none;
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #ffffff;
+    padding: 5px 10px;
+    border-radius: 4px;
+    font-size: 14px;
+    white-space: nowrap;
+}
+
+#menu-item:hover {
+    transform: scale(1.1);
+    opacity: 1;
+}
+
+#menu-item:hover .item-name {
+    display: block;
+    opacity: 0.8;
+}
+
+#menu-item:hover i {
     transform: scale(1.2);
 }
 
@@ -124,7 +153,7 @@ label {
 }
 
 button {
-    margin-top: 20px;
+    /* margin-top: 20px; */
     padding: 1em 2em;
     border: none;
     outline: none;
@@ -137,10 +166,4 @@ button {
 
 button:hover {
     background-color: #3700b3;
-}
-
-@media screen and (max-width: 37.5em){
-    .buttons{
-        width: 100%;
-    }
 }
