--- a/css/simon.css
+++ b/css/simon.css
@@ -1,12 +1,16 @@
 .wrapper {
   background-color: #ffffff;
-  height: 37.5em;
-  width: 37.5em;
+  height: 35.5em;
+  width: 35.5em;
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
-  top: 55%;
+  top: 65%;
   border-radius: 0.5em;
+}
+
+h1 {
+  margin-top: 6%;
 }
 
 .simon {
@@ -113,8 +117,16 @@
   body {
     font-size: 10px;
   }
+
+  h1 {
+    margin-top: 23%;
+  }
+
   .wrapper {
     height: 35em;
     width: 35em;
+    margin-top: -90px;
+    margin-bottom: 180px;
+    padding: 1em;
   }
 }
