--- a/css/bankvideo.css
+++ b/css/bankvideo.css
@@ -1,44 +1,27 @@
-body{
+body {
     font-family: sans-serif;
     background-color: #000;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
-.container {
+.container-video {
     display: flex;
-    align-items: flex-start; /* Changed from center to flex-start */
+    align-items: flex-start;
+    /* Changed from center to flex-start */
     height: 100vh;
-    padding-top: 100px; /* Added padding to push content down */
+    padding-top: 35px;
+    /* Added padding to push content down */
     justify-content: center;
-}
-
-
-main{
-    align-items: center;
-}
-
-header {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    color: #ffffff;
-    background-color: #333;
     width: 100%;
-    box-sizing: border-box;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 1000;
 }
 
-.back-arrow {
-    font-size: 24px;
-    color: #fff;
-    text-decoration: none;
-    margin-right: 10px;
+
+main {
+    align-items: center;
+    width: 100%;
 }
+
 
 h1 {
     margin: 0;
@@ -62,6 +45,7 @@ h1 {
     margin: 10px 0;
     transition: transform 0.3s ease, color 0.3s ease;
 }
+
 .icons .icon {
     border-radius: 50%;
     width: 45px;
@@ -71,14 +55,15 @@ h1 {
     justify-content: center;
     margin: 0 1rem;
     cursor: pointer;
-  }
+}
+
 .icons .icon i {
     font-size: 1.5rem;
     color: #ffffff;
     margin: 0 1rem;
-  }
-  
-  .icon:hover {
+}
+
+.icon:hover {
     background-color: #21025f;
     transition: ease-in-out 0.5s;
     transform: scale(1.2);
