--- a/css/lunchvideo.css
+++ b/css/lunchvideo.css
@@ -1,85 +1,27 @@
-body{
+body {
     font-family: sans-serif;
     background-color: #000;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
-.container {
+.container-video {
     display: flex;
-    align-items: flex-start; /* Changed from center to flex-start */
+    align-items: flex-start;
+    /* Changed from center to flex-start */
     height: 100vh;
-    padding-top: 100px; /* Added padding to push content down */
+    padding-top: 35px;
+    /* Added padding to push content down */
     justify-content: center;
 }
 
 
-main{
+main {
     align-items: center;
 }
 
-header {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    color: #ffffff;
-    background-color: #333;
-    width: 100%;
-    box-sizing: border-box;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 1000;
-}
-
-.back-arrow {
-    font-size: 24px;
-    color: #fff;
-    text-decoration: none;
-    margin-right: 10px;
-}
 
 h1 {
     margin: 0;
     color: #ffffff;
-}
-
-.icons {
-    position: fixed;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.icon {
-    font-size: 24px;
-    color: #000;
-    text-decoration: none;
-    margin: 10px 0;
-    transition: transform 0.3s ease, color 0.3s ease;
-}
-.icons .icon {
-    border-radius: 50%;
-    width: 45px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 1rem;
-    cursor: pointer;
-  }
-.icons .icon i {
-    font-size: 1.5rem;
-    color: #ffffff;
-    margin: 0 1rem;
-  }
-  
-  .icon:hover {
-    background-color: #21025f;
-    transition: ease-in-out 0.5s;
-    transform: scale(1.2);
 }
