--- a/css/memory.css
+++ b/css/memory.css
@@ -1,105 +1,163 @@
-body{
-  overflow: hidden;
+.wrapper {
+  box-sizing: content-box;
+  width: 26.87em;
+  padding: 2.5em 3em;
+  background-color: #ffffff;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 57%;
+  border-radius: 0.6em;
+  box-shadow: 0 0.9em 2.8em rgba(86, 66, 0, 0.2);
+  margin-top: 100px;
 }
 
-.wrapper {
-    box-sizing: content-box;
-    width: 26.87em;
-    padding: 2.5em 3em;
-    background-color: #ffffff;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 57%;
-    border-radius: 0.6em;
-    box-shadow: 0 0.9em 2.8em rgba(86, 66, 0, 0.2);
+.game-container {
+  position: relative;
+  width: 100%;
+  display: grid;
+  gap: 0.6em;
+}
+
+.stats-container {
+  text-align: right;
+  margin-bottom: 1.2em;
+}
+
+.stats-container span {
+  font-weight: 600;
+}
+
+.card-container {
+  position: relative;
+  width: 6.25em;
+  height: 6.25em;
+  cursor: pointer;
+}
+
+.card-before,
+.card-after {
+  position: absolute;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 4px solid #000000;
+  transition: transform 0.7s ease-out;
+  backface-visibility: hidden;
+}
+
+.card-before {
+  background-color: #121212;
+  font-size: 2.8em;
+  font-weight: 600;
+}
+
+.card-after {
+  background-color: #ffffff;
+  transform: rotateY(180deg);
+}
+
+.card-container.flipped .card-before {
+  transform: rotateY(180deg);
+}
+
+.card-container.flipped .card-after {
+  transform: rotateY(0deg);
+}
+
+.controls-container {
+  position: fixed;
+  top: 69px;
+  /* Adjust based on your navbar height */
+  left: 0;
+  width: 100%;
+  height: calc(100vh - 56px);
+  /* Subtract the height of the navbar */
+  background-color: rgba(0, 0, 0);
+  /* Adjust for desired opacity */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+#stop {
+  font-size: 1.1em;
+  display: block;
+  margin: 1.1em auto 0 auto;
+  /* background-color: #000000; */
+  color: #ffffff;
+}
+
+.controls-container button {
+  font-size: 1.3em;
+  box-shadow: 0 0.6em 2em rgba(86, 66, 0, 0.2);
+}
+
+.hide {
+  display: none;
+}
+
+#result {
+  text-align: center;
+  color: #ffffff;
+}
+
+#result h2 {
+  font-size: 2.5em;
+}
+
+#result h4 {
+  font-size: 1.8em;
+  margin: 0.6em 0 1em 0;
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+  .wrapper {
+    width: 90%;
+    padding: 1.5em 1em;
+    top: 115%;
+    margin-top: 50px;
   }
-  .game-container {
-    position: relative;
-    width: 100%;
-    display: grid;
-    gap: 0.6em;
-  }
-  .stats-container {
-    text-align: right;
-    margin-bottom: 1.2em;
-  }
-  .stats-container span {
-    font-weight: 600;
-  }
+
   .card-container {
-    position: relative;
-    width: 6.25em;
-    height: 6.25em;
-    cursor: pointer;
+    width: 6em;
+    height: 6em;
   }
-  .card-before,
-  .card-after {
-    position: absolute;
-    border-radius: 5px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 4px solid #000000;
-    transition: transform 0.7s ease-out;
-    backface-visibility: hidden;
-  }
+
   .card-before {
-    background-color: #121212;
-    font-size: 2.8em;
-    font-weight: 600;
-  }
-  .card-after {
-    background-color: #ffffff;
-    transform: rotateY(180deg);
-  }
-  .card-container.flipped .card-before {
-    transform: rotateY(180deg);
-  }
-  .card-container.flipped .card-after {
-    transform: rotateY(0deg);
-  }
-  .controls-container {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    background-color: #121212;
-    top: 0;
-  }
-  /* button {
-    border: none;
-    border-radius: 0.3em;
-    padding: 1em 1.5em;
-    cursor: pointer;
-  } */
-  #stop {
-    font-size: 1.1em;
-    display: block;
-    margin: 1.1em auto 0 auto;
-    /* background-color: #000000; */
-    color: #ffffff;
-  }
-  .controls-container button {
-    font-size: 1.3em;
-    box-shadow: 0 0.6em 2em rgba(86, 66, 0, 0.2);
-  }
-  .hide {
-    display: none;
-  }
-  #result {
-    text-align: center;
-    color: #ffffff;
-  }
-  #result h2 {
-    font-size: 2.5em;
-  }
-  #result h4 {
     font-size: 1.8em;
-    margin: 0.6em 0 1em 0;
   }
+
+  .stats-container {
+    text-align: center;
+    margin-bottom: 1em;
+  }
+
+  .stats-container div {
+    margin-bottom: 0.5em;
+  }
+}
+
+@media (max-width: 576px) {
+  .wrapper {
+    width: 90%;
+    padding: 1em 0.5em;
+    top: 60%;
+    margin-top: 5px;
+  }
+
+  .card-container {
+    width: 4em;
+    height: 4em;
+  }
+
+  .card-before {
+    font-size: 1.5em;
+  }
+}
