--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,32 +7,32 @@
 
 :root {
     --color-primary: #000;
-    --color-secondary: #270dbf;
+    --color-secondary: #0a013e;
     --color-white: #FFFFFF;
     --color-black: #000;
     --color-grey0: #f8f8f8;
-    --color-grey-1: #dbe1e8;
-    --color-grey-2: #b2becd;
-    --color-grey-3: #6c7983;
-    --color-grey-4: #454e56;
-    --color-grey-5: #2a2e35;
-    --color-grey-6: #12181b;
+    --color-grey-1: #6f7c86;
+    --color-grey-2: #626f78;
+    --color-grey-3: #33393d;
+    --color-grey-4: #24282c;
+    --color-grey-5: #252835;
+    --color-grey-6: #0b0e10;
     --br-sm-2: 14px;
-    --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
+    --box-shadow-1: 0 3px 15px rgba(0, 0, 0, .3);
 }
 
 .light-mode {
     --color-primary: #FFFFFF;
-    --color-secondary: #f50000;
+    --color-secondary: #2200e3;
     --color-white: #000;
     --color-black: #ffffffff;
     --color-grey0: #f8f8f8;
-    --color-grey-1: #6c7983;
-    --color-grey-2: #6c7983;
-    --color-grey-3: #6c7983;
-    --color-grey-4: #454e56;
-    --color-grey-5: #f8f8f8;
-    --color-grey-6: #12181b;
+    --color-grey-1: #dbe1e8;
+    --color-grey-2: #b2becd;
+    --color-grey-3: #81919d;
+    --color-grey-4: #697681;
+    --color-grey-5: #4b5260;
+    --color-grey-6: #20282c;
 }
 
 body {
@@ -78,9 +78,15 @@ section {
     display: block;
     animation: appear 1s ease-in-out;
     transform: translateY(0) scaleY(1);
+
     @keyframes appear {
-        0%{ transform: translateY(-100%) scaleY(0); }
-        100%{ transform: translateY(0) scaleY(1); }
+        0% {
+            transform: translateY(-100%) scaleY(0);
+        }
+
+        100% {
+            transform: translateY(0) scaleY(1);
+        }
     }
 }
 
@@ -95,7 +101,8 @@ section {
     align-items: center;
     justify-content: center;
     transform: translateY(-50%);
-    .control{
+
+    .control {
         padding: 1rem;
         cursor: pointer;
         background-color: var(--color-grey-4);
@@ -106,17 +113,22 @@ section {
         justify-content: center;
         align-items: center;
         margin: .7rem 0;
-        box-shadow: var(--box-shadow-1) ;
+        box-shadow: var(--box-shadow-1);
+
         i {
             font-size: 1.2rem;
             color: var(--color-grey-2);
             pointer-events: none;
         }
     }
+
     .active-btn {
         background-color: var(--color-secondary);
         transition: all .4s ease-in-out;
-        i { color: var(--color-white); }
+
+        i {
+            color: var(--color-white);
+        }
     }
 }
 
@@ -132,10 +144,14 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 3px 15px rgba(0,0,0,.3);
+    box-shadow: 0 3px 15px rgba(0, 0, 0, .3);
     transition: all .1s ease-in-out;
-    &:active{ transform: translateY(-3px); }
-    i{
+
+    &:active {
+        transform: translateY(-3px);
+    }
+
+    i {
         font-size: 1.4rem;
         color: var(--color-grey-2);
         pointer-events: none;
@@ -148,10 +164,12 @@ section {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     min-height: 100vh;
+
     .left-header {
         display: flex;
         align-items: center;
         position: relative;
+
         .h-shape {
             transition: all .4s ease-in-out;
             width: 65%;
@@ -163,6 +181,7 @@ section {
             z-index: -1;
             clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
         }
+
         .image {
             border-radius: var(--br-sm-2);
             height: 90%;
@@ -170,13 +189,15 @@ section {
             margin-left: 4rem;
             background-color: var(--color-black);
             transition: all .4s ease-in-out;
+
             img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 transition: all .4s ease-in-out;
                 filter: grayscale(100%);
-                &:hover{
+
+                &:hover {
                     filter: grayscale(0);
                 }
             }
@@ -188,10 +209,15 @@ section {
         flex-direction: column;
         justify-content: center;
         padding-right: 18rem;
+
         .name {
             font-size: 3rem;
-            span { color: var(--color-secondary); }
+
+            span {
+                color: var(--color-secondary);
+            }
         }
+
         p {
             margin: 1.5rem 0;
             line-height: 2rem;
@@ -205,30 +231,36 @@ section {
     grid-template-columns: repeat(2, 1fr);
     padding-top: 3.5rem;
     padding-bottom: 5rem;
+
     .right-about {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 2rem;
+
         .about-item {
             border: 1px solid var(--color-grey-5);
             border-radius: 5px;
             transition: all .4s ease-in-out;
-            box-shadow: 1px 2px 15px rgba(0,0,0,.1);
+            box-shadow: 1px 2px 15px rgba(0, 0, 0, .1);
+
             &:hover {
                 cursor: default;
                 transform: translateY(-5px);
                 border: 1px solid var(--color-secondary);
-                box-shadow: 1px 4px 15px rgba(0,0,0,.32);
+                box-shadow: 1px 4px 15px rgba(0, 0, 0, .32);
             }
+
             .abt-text {
                 padding: 1.5rem;
                 display: flex;
                 flex-direction: column;
+
                 .large-text {
                     font-size: 3rem;
                     font-weight: 700;
                     color: var(--color-secondary);
                 }
+
                 .small-text {
                     padding-left: 3rem;
                     position: relative;
@@ -236,6 +268,7 @@ section {
                     font-size: 1.2rem;
                     color: var(--color-grey-1);
                     letter-spacing: 2px;
+
                     &::before {
                         content: '';
                         position: absolute;
@@ -252,11 +285,13 @@ section {
 
     .left-about {
         padding-right: 5rem;
+
         p {
             line-height: 2rem;
             padding: 1rem;
             color: var(--color-grey-1);
         }
+
         h4 {
             font-size: 2rem;
             text-transform: uppercase;
@@ -264,115 +299,157 @@ section {
     }
 }
 
-// .about-stats {
-//     padding-bottom: 4rem;
-//     .progress-bars {
-//         display: grid;
-//         grid-template-columns: repeat(2, 1fr);
-//         grid-gap: 2rem;
-//         .progress-bar {
-//             display: flex;
-//             flex-direction: column;
-//             .prog-title {
-//                 text-transform: uppercase;
-//                 font-weight: 500;
-//             }
-//             .progress-con {
-//                 display: flex;
-//                 align-items: center;
-//                 .prog-text {
-//                     color: var(--color-grey-2);
-//                 }
-//                 .progress {
-//                     width: 100%;
-//                     height: .45rem;
-//                     background-color: var(--color-grey-4);
-//                     margin-left: 1rem;
-//                     position: relative;
-//                     span {
-//                         position: absolute;
-//                         top: 0;
-//                         left: 0;
-//                         height: 100%;
-//                         background-color: var(--color-secondary);
-//                         transition: all .4s ease-in-out;
-//                         width: 60%;
-//                     }
-//                     .html { width: 80%; }
-//                     .css { width: 95%; }
-//                     .js { width: 75%; }
-//                     .react{ width: 60%; }
-//                     .node{ width: 87%; }
-//                     .python{ width: 70%; }
-//                 }
-//             }
-//         }
-//     }
-// }
-// .stat-title {
-//     text-transform: uppercase;
-//     font-size: 1.4rem;
-//     text-align: center;
-//     padding: 3.5rem 0;
-//     position: relative;
-//     &::before {
-//         content: '';
-//         position: absolute;
-//         left: 50%;
-//         top: 0;
-//         width: 40%;
-//         height: 1px;
-//         background-color: var(--color-grey-5);
-//         transform: translateX(-50%);
-//     }
-// }
+.about-stats {
+    padding-bottom: 4rem;
+
+    .progress-bars {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+
+        .progress-bar {
+            display: flex;
+            flex-direction: column;
+
+            .prog-title {
+                text-transform: uppercase;
+                font-weight: 500;
+            }
+
+            .progress-con {
+                display: flex;
+                align-items: center;
+
+                .prog-text {
+                    color: var(--color-grey-2);
+                }
+
+                .progress {
+                    width: 100%;
+                    height: .45rem;
+                    background-color: var(--color-grey-4);
+                    margin-left: 1rem;
+                    position: relative;
+
+                    span {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        height: 100%;
+                        background-color: var(--color-secondary);
+                        transition: all .4s ease-in-out;
+                        width: 60%;
+                    }
+
+                    .html {
+                        width: 90%;
+                    }
+
+                    .css {
+                        width: 80%;
+                    }
+
+                    .js {
+                        width: 65%;
+                    }
+
+                    .bootstrap {
+                        width: 75%;
+                    }
+
+                    .react {
+                        width: 60%;
+                    }
+
+                    .node {
+                        width: 87%;
+                    }
+
+                    .python {
+                        width: 70%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.stat-title {
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    text-align: center;
+    padding: 3.5rem 0;
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        left: 50%;
+        top: 0;
+        width: 40%;
+        height: 1px;
+        background-color: var(--color-grey-5);
+        transform: translateX(-50%);
+    }
+}
 
 /*Timeline*/
-// .timeline {
-//     display: grid;
-//     grid-template-columns: repeat(2, 1fr);
-//     grid-gap: 2rem;
-//     padding-bottom: 3rem;
-//     .timeline-item {
-//         position: relative;
-//         padding-left: 3rem;
-//         border-left: 1px solid var(--color-grey-5);
-//         .tl-icon {
-//             position: absolute;
-//             left: -27px;
-//             top: 0;
-//             background-color: var(--color-secondary);
-//             width: 50px;
-//             height: 50px;
-//             border-radius: 50%;
-//             display: flex;
-//             align-items: center;
-//             justify-content: center;
-//             i { font-size: 1.3rem; }
-//         }
-//         .tl-duration {
-//             padding: .2rem .6rem;
-//             background-color: var(--color-grey-5);
-//             border-radius: 15px;
-//             display: inline-block;
-//             font-size: .8rem;
-//             text-transform: uppercase;
-//             font-weight: 500;
-//         }
-//         h5 {
-//             padding: 1rem 0;
-//             text-transform: uppercase;
-//             font-size: 1.3rem;
-//             font-weight: 600;
-//             span {
-//                 color: var(--color-grey-2);
-//                 font-weight: 500;
-//                 font-size: 1.2rem;
-//             }
-//         }
-//         p{ color: var(--color-grey-2); }
-//     }
-// }
+.timeline {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    padding-bottom: 3rem;
+
+    .timeline-item {
+        position: relative;
+        padding-left: 3rem;
+        border-left: 1px solid var(--color-grey-5);
+
+        .tl-icon {
+            position: absolute;
+            left: -27px;
+            top: 0;
+            background-color: var(--color-secondary);
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            i {
+                font-size: 1.3rem;
+            }
+        }
+
+        .tl-duration {
+            padding: .2rem .6rem;
+            background-color: var(--color-grey-5);
+            border-radius: 15px;
+            display: inline-block;
+            font-size: .8rem;
+            text-transform: uppercase;
+            font-weight: 500;
+        }
+
+        h5 {
+            padding: 1rem 0;
+            text-transform: uppercase;
+            font-size: 1.3rem;
+            font-weight: 600;
+
+            span {
+                color: var(--color-grey-2);
+                font-weight: 500;
+                font-size: 1.2rem;
+            }
+        }
+
+        p {
+            color: var(--color-grey-2);
+        }
+    }
+}
 
 //Portfolios
 .port-text {
@@ -385,15 +462,18 @@ section {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem;
     margin-top: 3rem;
+
     .portfolio-item {
         position: relative;
         border-radius: 15px;
+
         img {
             width: 100%;
             height: 300px;
             object-fit: cover;
             border-radius: 15px;
         }
+
         .hover-items {
             width: 100%;
             height: 100%;
@@ -409,15 +489,18 @@ section {
             opacity: 0;
             transform: scale(0);
             transition: all .4s ease-in-out;
+
             h3 {
                 font-size: 1.5rem;
                 color: var(--color-white);
                 margin-bottom: 1.5rem;
             }
+
             .icons {
                 display: flex;
                 justify-content: center;
                 align-items: center;
+
                 .icon {
                     background-color: var(--color-primary);
                     border-radius: 50%;
@@ -429,14 +512,19 @@ section {
                     margin: 0 1rem;
                     cursor: pointer;
                     transition: all .4s ease-in-out;
+
                     i {
                         font-size: 1.5rem;
                         color: var(--color-white);
                         margin: 0 1rem;
                     }
+
                     &:hover {
                         background-color: var(--color-white);
-                        i { color: var(--color-primary); }
+
+                        i {
+                            color: var(--color-primary);
+                        }
                     }
                 }
             }
@@ -454,13 +542,16 @@ section {
 .contact-content-con {
     display: flex;
     padding-top: 3.5rem;
+
     .left-contact {
         flex: 2;
+
         h4 {
             margin-top: 1rem;
             font-size: 2rem;
             text-transform: uppercase;
         }
+
         p {
             margin: 1rem 0;
             line-height: 2rem;
@@ -471,13 +562,16 @@ section {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
+
                 p {
                     margin: .3rem 0 !important;
                     padding: 0 !important;
                 }
+
                 .icon {
                     display: grid;
                     grid-template-columns: 40px 1fr;
+
                     i {
                         display: flex;
                         align-items: center;
@@ -490,6 +584,7 @@ section {
         .contact-icon {
             display: flex;
             margin-top: 2rem;
+
             a {
                 display: flex;
                 align-items: center;
@@ -502,10 +597,15 @@ section {
                 border-radius: 50%;
                 margin: 0 .4rem;
                 transition: all .4s ease-in-out;
+
                 &:hover {
                     background-color: var(--color-secondary);
-                    i { color: var(--color-primary); }
+
+                    i {
+                        color: var(--color-primary);
+                    }
                 }
+
                 i {
                     display: flex;
                     align-items: center;
@@ -519,9 +619,12 @@ section {
     .right-contact {
         flex: 3;
         margin-left: 3rem;
+
         .input-control {
             margin: 1.5rem 0;
-            input, textarea {
+
+            input,
+            textarea {
                 border-radius: 30px;
                 font-weight: inherit;
                 font-size: inherit;
@@ -535,12 +638,15 @@ section {
                 resize: none;
             }
         }
+
         .i-c-2 {
             display: flex;
-            :last-child{
+
+            :last-child {
                 margin-left: 1.5rem;
             }
         }
+
         .submit-btn {
             display: flex;
             justify-content: flex-start;
@@ -554,17 +660,24 @@ section {
     display: flex;
     align-self: flex-start;
 }
+
 .main-btn {
     border-radius: 30px;
     color: inherit;
     font-weight: 600;
     position: relative;
-    border: 1px solid var(--color-secondary);
+    border: 1px solid var(--color-primary);
+    background-color: var(--color-secondary);
     display: flex;
     align-self: flex-start;
     align-items: center;
     overflow: hidden;
-    .btn-text { padding: 0 2rem; }
+    height: 40px;
+
+    .btn-text {
+        padding: 0 2rem;
+    }
+
     .btn-icon {
         background-color: var(--color-secondary);
         display: flex;
@@ -573,6 +686,7 @@ section {
         border-radius: 50%;
         padding: 1rem;
     }
+
     &::before {
         content: '';
         position: absolute;
@@ -582,8 +696,10 @@ section {
         transition: all .4s ease-out;
         z-index: -1;
     }
+
     &:hover {
         transition: all .4s ease-out;
+
         &::before {
             width: 100%;
             height: 100%;
@@ -597,12 +713,17 @@ section {
 
 .main-title {
     text-align: center;
+
     h2 {
         position: relative;
         text-transform: uppercase;
         font-size: 4rem;
         font-weight: 700;
-        span { color: var(--color-secondary); }
+
+        span {
+            color: var(--color-secondary);
+        }
+
         .bg-text {
             position: absolute;
             top: 50%;
