--- a/css/sudoku_solver.css
+++ b/css/sudoku_solver.css
@@ -1,10 +1,10 @@
 * {
     margin: 0;
     padding: 0;
-    
+
 }
 
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     background: gray;
@@ -17,20 +17,21 @@ body{
 
 h2 {
     font-weight: 500;
+    padding-top: 60px;
 }
 
-.sudoku-container{
+.sudoku-container {
     margin-top: 20px;
     display: flex;
     justify-content: center;
 }
 
-table{
+table {
     border-collapse: collapse;
     border: 4px solid #000;
 }
 
-.cell{
+.cell {
     width: 40px;
     height: 40px;
     text-align: center;
@@ -40,25 +41,25 @@ table{
 }
 
 table tr:nth-child(3n) td,
-table tr:nth-child(3n+3) td{
+table tr:nth-child(3n+3) td {
     border-bottom: 2px solid #000;
 }
 
-table td:nth-child(3n){
+table td:nth-child(3n) {
     border-right: 2px solid #000;
 }
 
-input{
+input {
     outline: none;
 }
 
 input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button{
+input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
 
-button{
+button {
     margin-top: 20px;
     padding: 10px 20px;
     font-size: 16px;
@@ -70,11 +71,11 @@ button{
     transition: all 0.3s ease;
 }
 
-button:hover{
+button:hover {
     background-color: darkgreen;
 }
 
-.solved{
+.solved {
     background-color: #9ccc65;
     transition: all 0.2s ease-in-out;
 }
@@ -97,4 +98,19 @@ header {
     color: #fff;
     text-decoration: none;
     margin-right: 10px;
+}
+
+/* Media queries */
+@media (max-width: 600px) {
+    .sudoku-container {
+        width: 90%;
+    }
+}
+
+@media (max-width: 400px) {
+    .cell {
+        width: 100%;
+        height: 25px;
+        font-size: 16px;
+    }
 }
