--- a/css/wordguessing.css
+++ b/css/wordguessing.css
@@ -1,38 +1,57 @@
 .wrapper {
-    position: absolute;
-    width: 90%;
-    max-width: 37em;
     background-color: #ffffff;
-    padding: 7em 3em;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 73%;
-    left: 50%;
-    text-align: center;
+    padding: 2em;
     border-radius: 1em;
+    text-align: center;
+    margin-bottom: 1em;
 }
 
 .controls-container {
     background-color: #121212;
-    position: absolute;
-    width: 100%;
-    height: 135%;
+    padding: 2em;
+    border-radius: 1em;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    top: 0;
+    margin-bottom: 1em;
 }
 
-/* #start {
-    font-size: 1.2em;
-    padding: 1em 3em;
-    background-color: #ffffff;
-    border: none;
-    outline: none;
-    border-radius: 2em;
+.controls-container button {
+    width: 100%;
+}
+
+.hint-ref {
+    margin-bottom: 1em;
+}
+
+#letter-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5em;
+    justify-content: center;
+}
+
+.letters {
+    border: 2px solid #7786f5;
+    color: #7786f5;
+    border-radius: 0.3em;
     cursor: pointer;
-} */
+    height: 3em;
+    width: 3em;
+}
+
+.letters.correct {
+    background-color: #008000;
+    color: #ffffff;
+    border: 2px solid #008000;
+}
+
+.letters.incorrect {
+    background-color: #620202;
+    color: #ffffff;
+    border: 2px solid #8b0303;
+}
 
 #letter-container {
     display: flex;
@@ -43,7 +62,6 @@
 }
 
 #letter-container button {
-    /* background-color: #ffffff; */
     border: 2px solid #7786f5;
     color: #7786f5;
     outline: none;
