--- a/css/styles.scss
+++ b/css/styles.scss
@@ -357,6 +357,22 @@ section {
                         width: 75%;
                     }
 
+                    .csharp {
+                        width: 80%;
+                    }
+
+                    .core {
+                        width: 50%;
+                    }
+
+                    .sql {
+                        width: 75%;
+                    }
+
+                    .azure {
+                        width: 60%;
+                    }
+
                     .react {
                         width: 60%;
                     }
